--- a/Prototype/Prototype/Base.lproj/Main.storyboard
+++ b/Prototype/Prototype/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="580" id="Vex-Qj-dHp">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedImageCell" rowHeight="580" id="Vex-Qj-dHp" customClass="FeedImageCell" customModule="Prototype" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="50" width="393" height="580"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Vex-Qj-dHp" id="Ax1-pi-gZ9">
@@ -99,6 +99,12 @@ Location</string>
                                         <constraint firstAttribute="bottomMargin" secondItem="UGy-kg-a1I" secondAttribute="bottom" priority="999" constant="6" id="zwq-wv-Hu5"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="oTj-Gk-WGt" id="ecp-TC-egU"/>
+                                    <outlet property="feedImageView" destination="UoL-45-xey" id="7Vm-21-ion"/>
+                                    <outlet property="locationContainer" destination="rdD-F3-hSR" id="cGx-lj-kdx"/>
+                                    <outlet property="locationLabel" destination="kyN-yR-Pp7" id="Ab4-8T-ekh"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
