--- a/EssentialFeed/EssentialFeediOS/Feed UI/Views/Feed.storyboard
+++ b/EssentialFeed/EssentialFeediOS/Feed UI/Views/Feed.storyboard
@@ -115,6 +115,7 @@ Location</string>
                         <connections>
                             <outlet property="dataSource" destination="63n-dS-Pkm" id="KCe-sA-XII"/>
                             <outlet property="delegate" destination="63n-dS-Pkm" id="Ou0-cw-at3"/>
+                            <outlet property="prefetchDataSource" destination="63n-dS-Pkm" id="XVy-EK-aqG"/>
                         </connections>
                     </tableView>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="byY-1C-jRK">
